--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Reference: https://squidfunk.github.io/mkdocs-material/reference/
-site_name: SANS HHC Write-Up
-site_author: Insert Author name
+site_name: SANS HHC 23 Write-Up
+site_author: Alpha33
 theme:
   icon:
     # Material for MkDocs bundles several icon sets:
@@ -100,13 +100,14 @@ nav:
 # The 'nav' section defines the content of the sidebar navigation.
 - Welcome: 'index.md'
 - Objectives:
-  - Section 1:
     - Objective 1: 'objectives/o1.md'
-  - Section 2:
     - Objective 2: 'objectives/o2.md'
     - Objective 3: 'objectives/o3.md'
-  - Section 3:
     - Objective 4: 'objectives/o4.md'
     - Objective 5: 'objectives/o5.md'
-- Extras:
-  - Easter Eggs: 'easter_eggs.md'
+    - Objective 6: 'objectives/o6.md'
+    - Objective 7: 'objectives/o7.md'
+    - Objective 8: 'objectives/o8.md'
+    - Objective 9: 'objectives/o9.md'
+    - Objective 10: 'objectives/o10.md'
+
