--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,4 +110,15 @@ nav:
     - Objective 8: 'objectives/o8.md'
     - Objective 9: 'objectives/o9.md'
     - Objective 10: 'objectives/o10.md'
+    - Objective 11: 'objectives/o11.md'
+    - Objective 12: 'objectives/o12.md'
+    - Objective 13: 'objectives/o13.md'
+    - Objective 14: 'objectives/o14.md'
+    - Objective 15: 'objectives/o15.md'
+    - Objective 16: 'objectives/o16.md'
+    - Objective 17: 'objectives/o17.md'
+    - Objective 18: 'objectives/o18.md'
+    - Objective 19: 'objectives/o19.md'
+    - Objective 20: 'objectives/o20.md'
+    - Objective 21: 'objectives/o21.md'
 
