fixed objective titles

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,25 +100,25 @@ nav:
 # The 'nav' section defines the content of the sidebar navigation.
 - Welcome: 'index.md'
 - Objectives:
-    - Objective 1: 'objectives/o1.md'
-    - Objective 2: 'objectives/o2.md'
-    - Objective 3: 'objectives/o3.md'
-    - Objective 4: 'objectives/o4.md'
-    - Objective 5: 'objectives/o5.md'
-    - Objective 6: 'objectives/o6.md'
-    - Objective 7: 'objectives/o7.md'
-    - Objective 8: 'objectives/o8.md'
-    - Objective 9: 'objectives/o9.md'
-    - Objective 10: 'objectives/o10.md'
-    - Objective 11: 'objectives/o11.md'
-    - Objective 12: 'objectives/o12.md'
-    - Objective 13: 'objectives/o13.md'
-    - Objective 14: 'objectives/o14.md'
-    - Objective 15: 'objectives/o15.md'
-    - Objective 16: 'objectives/o16.md'
-    - Objective 17: 'objectives/o17.md'
-    - Objective 18: 'objectives/o18.md'
-    - Objective 19: 'objectives/o19.md'
-    - Objective 20: 'objectives/o20.md'
-    - Objective 21: 'objectives/o21.md'
+    - Orientation: 'objectives/o1.md'
+    - Snowball Fight: 'objectives/o2.md'
+    - Linux 101: 'objectives/o3.md'
+    - Reportinator: 'objectives/o4.md'
+    - Azure 101: 'objectives/o5.md'
+    - Luggage Lock: 'objectives/o6.md'
+    - Linux PrivEsc: 'objectives/o7.md'
+    - Faster Lock Combination: 'objectives/o8.md'
+    - Game Cartridges 1: 'objectives/o9.md'
+    - Game Cartridges 2: 'objectives/o10.md'
+    - Game Cartridges 3: 'objectives/o11.md'
+    - Na'an: 'objectives/o12.md'
+    - KQL Kraken Hunt: 'objectives/o13.md'
+    - Phish Detection Agency: 'objectives/o14.md'
+    - Hashcat: 'objectives/o15.md'
+    - Elf Hunt: 'objectives/o16.md'
+    - Certificate SSHenanigans: 'objectives/o17.md'
+    - The Captain's Comms: 'objectives/o18.md'
+    - Space Island Door Access: 'objectives/o19.md'
+    - Fishing Guid: 'objectives/o20.md'
+    - Fishing Mastery: 'objectives/o21.md'
 
